crates/check_cli/tests/snapshots/main_commands_lint/print_verbose.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
---
## `check.js`

```js
for(;true;);

```

# Termination Message

```block
lint ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
check.js:1:6 lint/correctness/noConstantCondition ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Unexpected constant condition.
  
  > 1 │ for(;true;);
      │      ^^^^
    2 │ 
  

```

```block
 VERBOSE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i Files processed:
  
  - check.js
  

```

```block
 VERBOSE  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  i Files fixed:
  
  ! The list is empty.
  

```

```block
Scanned project folder in <TIME>.
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
```
