crates/check_cli/tests/snapshots/main_commands_lint/should_apply_root_settings_with_stdin_file_path.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
---
## `check.jsonc`

```json
{
  "javascript": {
    "formatter": {
      "quoteStyle": "single",
      "semicolons": "always"
    }
  }
}
```

# Input messages

```block
let a = "a"
```

# Emitted Messages

```block
const _a = 'a';

```
