crates/check_cli/tests/snapshots/main_commands_lint/should_disable_a_rule_group.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: content
---
## `check.json`

```json
{
  "linter": {
    "rules": {
      "recommended": true,
      "suspicious": {
        "recommended": false
      }
    }
  }
}
```

## `fix.js`

```js
(1 >= -0)
```

# Emitted Messages

```block
Checked 1 file in <TIME>. No fixes applied.
```
