crates/check_cli/tests/snapshots/main_commands_lint/should_error_if_changed_flag_is_used_without_since_or_default_branch_config.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: content
---
## `file.js`

```js
console.log('file');
```

## `file2.js`

```js
console.log('file2');
```

# Termination Message

```block
internalError/io ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × The combination of configuration and arguments is invalid: 
    The `--changed` flag was set, but Check couldn't determine the base to compare against. Either set configuration.vcs.defaultBranch or use the --since argument.
  


```


