crates/check_cli/tests/snapshots/main_commands_lint/should_error_if_since_arg_is_used_without_changed.snap
---
source: crates/check_cli/tests/snap_test.rs
expression: redactor(content)
---
## `file.js`

```js
console.log('file');
```

## `file2.js`

```js
console.log('file2');
```

# Termination Message

```block
flags/invalid ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Incompatible arguments --since and --changed. In order to use --since, you must also use --changed.
  


```
